--- a/HTML modulo 2/exercicio08 caixas/exercicio/style.css
+++ b/HTML modulo 2/exercicio08 caixas/exercicio/style.css
@@ -39,3 +39,6 @@ section{
     background-image: linear-gradient(to right, #6BDFEE, #6bdfee28 70%);
     padding: 5px;
 }
+.alinha{
+    text-align: center;
+}
