--- a/HTML modulo 2/exercicio08 caixas/exercicio/style.css
+++ b/HTML modulo 2/exercicio08 caixas/exercicio/style.css
@@ -1,30 +1,46 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 @font-face {
     font-family: 'droid';
     src: url("fontes/idroid.otf") format('opentype');
     font-weight: normal;
     font-style: normal;
 }
+
+:root{
+    --cor0: #1CA5B8;
+    --cor1: #6BDFEE;
+    --cor2: #10606B;
+    --cor3: #0d474e;
+
+    --font-padrao: Arial. Verdana, Helvetica, sans-serif;
+    --font-destaque: "Bebas Neue", sans-serif;
+}
+
 body{
-    background-color: #1CA5B8;
+    background-color: var(--cor0);
     font-family: Arial, Helvetica, sans-serif;
     margin: 0px;
 }
 
 header{
-    background-image: linear-gradient(to bottom, #6BDFEE, #10606B);
+    background-image: linear-gradient(to bottom, var(--cor1), var(--cor2));
     color: white;
     margin: 0px;
-    margin-top: -20px;
     min-height: 150px;
 }
 header > h1{
+    font-family: var(--font-destaque);
     text-align: center;
+    margin-top: 0px;
     padding: 10px;
 }
 header > p {
     text-align: center;
     padding: 10px;
+}
+nav{
+    background-color: var(--cor3);
 }
 section{
     background-color: white;
@@ -41,4 +57,8 @@ section{
 }
 .alinha{
     text-align: center ;
+}
+footer{
+    background-color: var(--cor3);
+    color: white;
 }
