--- a/HTML modulo 2/exercicio08 caixas/exercicio/style.css
+++ b/HTML modulo 2/exercicio08 caixas/exercicio/style.css
@@ -42,12 +42,26 @@ header > p {
 nav{
     background-color: var(--cor3);
 }
-section{
+main{
     background-color: white;
     text-align: justify;
-    width: 800px;
+    min-width: 300px;
+    max-width: 800px;
     margin: auto;
+    margin-bottom: 20px;
     padding: 10px;
+    box-shadow: 0px 0px 1px rgb(0, 0, 0);
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+main img{
+    width: 100%;
+}
+
+main img.pequena{
+    width: 50%;
+    display: block;
+    margin: auto;
 }
 
 .titulo{
