--- a/HTML modulo 2/exercicio08 caixas/exercicio/style.css
+++ b/HTML modulo 2/exercicio08 caixas/exercicio/style.css
@@ -23,6 +23,10 @@ body{
     margin: 0px;
 }
 
+a.externo::after{
+    content: '\1F517';
+}
+
 header{
     background-image: linear-gradient(to bottom, var(--cor1), var(--cor2));
     color: white;
@@ -66,6 +70,14 @@ nav a:hover{
     color: var(--cor3);
 }
 
+.titulo{
+    font-family: 'droid';
+    font-size: 1.2em;
+    color: var(--cor3);
+    background-image: linear-gradient(to right, #6BDFEE, transparent);
+    padding: 5px;
+}
+
 main{
     background-color: white;
     text-align: justify;
@@ -84,6 +96,7 @@ main p{
     text-indent: 15px;
     line-height: 2em;
     font-size: 1em;
+    padding: 10px 0px;
 }
 
 main strong{
@@ -113,14 +126,42 @@ main img.pequena{
     margin: auto;
 }
 
-.titulo{
-    font-family: 'droid';
-    font-size: 1.2em;
-    color: var(--cor3);
-    background-image: linear-gradient(to right, #6BDFEE, transparent);
-    padding: 5px;
+aside{
+    background-color: var(--cor1);
+    padding: 10px;
+    border-radius: 5px;
+    box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.527);
 }
-footer{
+
+aside > h3{
     background-color: var(--cor3);
     color: white;
+    padding: 5px;
+    margin: -10px -10px 0px -10px;
+    border-radius: 5px 5px 0px 0px;
+}
+
+aside > ul{
+    list-style-type: '\2714\00a0';
+    list-style-position: inside;
+    columns: 2;
+}
+
+footer{
+    background-color: var(--cor2);
+    color: white;
+    text-align: center;
+    font-size: 0.8em;
+    padding: 5px;
+}
+
+footer a{
+    color: white;
+    font-weight: bolder;
+    text-decoration: none;
+}
+
+footer a:hover{
+    text-decoration: underline;
+    color: var(--cor1);
 }
