--- a/HTML modulo 2/exercicio08 caixas/exercicio/style.css
+++ b/HTML modulo 2/exercicio08 caixas/exercicio/style.css
@@ -37,6 +37,7 @@ header{
 header > h1{
     font-family: var(--font-destaque);
     font-size: 3em;
+    font-weight: normal;
     text-align: center;
     margin-top: 0px;
     padding: 10px;
@@ -81,7 +82,7 @@ nav a:hover{
 main{
     background-color: white;
     text-align: justify;
-    min-width: 300px;
+    min-width: 280px;
     max-width: 800px;
     margin: auto;
     margin-bottom: 20px;
@@ -124,6 +125,22 @@ main img.pequena{
     max-width: 350px;
     display: block;
     margin: auto;
+}
+
+div.video{
+    background-color: var(--cor2);
+    margin: 0px -10px 30px -10px;
+    padding: 20px;
+    padding-bottom: 55%;
+    position: relative;
+    
+}
+div.video > iframe{
+    position: absolute;
+    top: 5%;
+    left: 5%;
+    width: 90%;
+    height: 90%;
 }
 
 aside{
