--- a/HTML-modulo-3/exercicio02 cordel/estilo/style.css
+++ b/HTML-modulo-3/exercicio02 cordel/estilo/style.css
@@ -1,26 +1,38 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&family=Sriracha&display=swap');
+
+:root{
+    --font1: Verdana, Geneva, Tahoma, sans-serif;
+    --font2: 'Passion One', cursive;
+    --font3: 'Sriracha', cursive;
+}
 
 *{
     margin: 0px;
     padding: 0px;
+    font-size: 1em;
 }
 
 html, body{
     min-height: 100vh;
     background-color: darkgray;
+    font-family: var(--font1);
 }
 
 header{
     background-color: black;
     color: white;
     text-align: center;
-
 }
 
 header > h1{
+    font-family: var(--font2);
     padding-top: 50px;
+
     /*text-transform: uppercase;*/
     font-variant: small-caps; /* Inicio de frase com letra maiucula*/
+
+    font-size: 10vw;
 }
 
 header > p{
@@ -38,10 +50,13 @@ a:hover{
 }
 
 section{
+    font-family: var(--font3);
     padding-top: 10vh;
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-size: 3.5vw;
+    
 }
 
 section.normal{
@@ -55,7 +70,8 @@ section.imagem{
 }
 
 section.imagem > p{
-    width: 400px;
+    display: inline-block;
+    padding: 5px;
     background-color: rgba(0, 0, 0, 0.37);
 }
 
