--- a/HTML-modulo-3/exercicio02 cordel/estilo/style.css
+++ b/HTML-modulo-3/exercicio02 cordel/estilo/style.css
@@ -55,8 +55,12 @@ section{
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
-    font-size: 3.5vw;
+    font-size: 3vw;
     
+}
+
+section > p{
+    padding-bottom: 2em;
 }
 
 section.normal{
@@ -67,12 +71,27 @@ section.normal{
 section.imagem{
     background-color: rgb(44, 44, 44);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.795);
+    background-size: cover;
+    background-attachment: fixed;
+
 }
 
 section.imagem > p{
     display: inline-block;
     padding: 5px;
-    background-color: rgba(0, 0, 0, 0.37);
+    background-color: rgba(0, 0, 0, 0.308);
+    text-shadow: 1px 1px 0px black;
+}
+
+section#img01{
+    background-image: url(../imagens/background001.jpg);
+    background-position: right center;
+}
+
+section#img02{
+    background-image: url(../imagens/background002.jpg);
+    
 }
 
 footer{
