--- a/HTML-modulo-4/Media_Queries/MQ05/estilos/style.css
+++ b/HTML-modulo-4/Media_Queries/MQ05/estilos/style.css
@@ -1,5 +1,57 @@
 @charset "UTF-8";
 
+*{
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0px;
+    padding: 0px;
+}
+
 body, html{
-    
+    background-color: lightblue;
+}
+
+header{
+    background-color: grey;
+}
+header h1{
+    padding: 10px;
+    text-align: center;
+}
+
+menu{
+    display: block;
+}
+menu > ul{
+    list-style-type: none;
+}
+menu a{
+    display: block;
+    text-align: center;
+    text-decoration: none;
+    background-color: rgb(95, 95, 95);
+    color: white;
+    border-top: 2px solid grey;
+}
+
+menu a:hover{
+    background-color: rgb(185, 185, 185);
+}
+
+main{
+    width: 90vw;
+    background-color: white;
+    margin: auto;
+    padding: 10px;
+    border-radius: 10px;
+    margin-top: 10px;
+
+}
+
+article h2{
+    padding-bottom: 10px;
+}
+article p{
+    text-align: justify;
+    margin-bottom: 20px;
+    text-indent: 10px;
 }
