--- a/HTML-modulo-4/Media_Queries/MQ05/estilos/style.css
+++ b/HTML-modulo-4/Media_Queries/MQ05/estilos/style.css
@@ -14,12 +14,26 @@ header{
     background-color: grey;
 }
 header h1{
+    color: white;
+    font-variant: small-caps;
     padding: 10px;
     text-align: center;
 }
 
-menu{
+i#burguer{
     display: block;
+    background-color: rgb(82, 82, 82);
+    color: white;
+    text-align: center;
+    cursor: pointer;
+}
+i#burguer:hover{
+    color: black;
+    background-color: rgb(92, 198, 233);
+}
+
+menu{
+    display: none;
 }
 menu > ul{
     list-style-type: none;
