--- a/HTML-modulo-4/Media_Queries/MQ05/estilos/style.css
+++ b/HTML-modulo-4/Media_Queries/MQ05/estilos/style.css
@@ -40,6 +40,7 @@ menu > ul{
 }
 menu a{
     display: block;
+    padding: 10px;
     text-align: center;
     text-decoration: none;
     background-color: rgb(95, 95, 95);
